# Assistentie

./: 03_Use case - EduPulse.md  04_Aannames - EduPulse.md  05_Experimenten - EduPulse.md  06_conceptueel_model_architectuur_en_flow_plus_instructie_code.md  Aannames - EduPulse.md  Aannames - ProActAssist.md  CODE_OF_CONDUCT.md  Empathymap | Leven-lang-lerende (-begeleider).md  Experimenten - EduPulse.md  Experimenten - ProActAssist.md  README.md  Use case - EduPulse.md  Use case - ProActAssist.md  experiment_v2_UPA.md
edupulse/: 1_start_fastapi.bat  1_start_fastapi.sh  2_start_streamlit.bat  2_start_streamlit.sh  README.md  main.py  pyproject.toml  requirements.txt
edupulse/agents/: README.md
edupulse/assets/: README.md
edupulse/backend/: README.md  __init__.py  main.py  model.pkl
edupulse/frontend/: README.md  app.py  ui.py
edupulse/shared/: README.md  data.csv  data_prep.py
