[tool.uv]
cache-dir = "./.uv_cache"

[project]
name = "streamlit-app-template"
version = "0.1.0"
description = "CEDA Edupulse App"
authors = [
    {name = "Ed de Feber", email = "ed.defeber@surf.nl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "openai>=2.26.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "streamlit>=1.46.0",
    "uvicorn>=0.41.0",
]
